tests/paczka1/small_fuzzy/97591970.err
Error in line 1: lhgtg S863 19,7
Error in line 10: zsO S686 928,1
Error in line 7: lhgtg S686 61,0
Error in line 14: lhgtg S863 41,3
